--- a/src/modules/static/landing.html
+++ b/src/modules/static/landing.html
@@ -5,7 +5,7 @@
 	<title>Slash Mini-Version</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" href="/static/style.css">
+	<link rel="stylesheet" href="./style.css">
 	<link rel="stylesheet" href="/static/style.css"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" >
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
@@ -14,71 +14,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"  ></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       
-    <style>
-
-#header{
-  font-family:Trebuchet MS, sa ns-serif;
-  font-size:32px;
-  color:#333;
-  font-style:italic;
-  font-weight:bold;
-  text-align:center;
-  padding-right:10px;
-  padding-top:35px;
-  padding-left:10px;
-  }
-
-  .container1
-  {
-      height: 270px;
-      width: 100%;
-  }
-  
-  .sb-example-1 .search {
-      width: 75%;
-      position: relative;
-      display: flex;
-      padding-top:15px;
-      padding-left:380px;
-    
-    }
-  
-    .sb-example-1 .searchTerm {
-      width: 100%;
-      border: 3px solid rgb(63, 155, 112);
-      border-right: none;
-      padding: 5px;
-      border-radius: 5px 0 0 5px;
-      outline: none;
-      color:  rgb(63, 155, 112);
-    }
-    .sb-example-1 .searchTerm:focus{
-      color: green;
-    }
-
-    .sb-example-1 .searchButton {
-      width: 40px;
-      height: 50px;
-      border: 1px solid rgb(63, 155, 112);
-      background: rgb(145, 228, 189);
-      text-align: center;
-      color: #fff;
-      border-radius: 0 5px 5px 0;
-      cursor: pointer;
-      font-size: 20px;
-    }
-    .sb-example-1 .searchButton i{
-      color: green;
-    }
-
-    img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 30px;
-    }
-   
-    </style>
    </head>
    <body>   
     <h1 id="header"> Welcome to Mini Version of SLASH! </h1>
