--- a/src/modules/static/result.html
+++ b/src/modules/static/result.html
@@ -5,7 +5,7 @@
     <title>Slash Mini-Version</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -15,66 +15,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <style>
-        .item-list {
-            text-align: center;
-            width: 100%;
-            margin-top: 20px;
-            padding: 5px 5px 5px 5px;
-        }
-
-        .td, th {
-            border: 1px solid;
-            padding: 7px;
-        }
-
-        .item-list tr:nth-child(even) {
-            background-color: rgb(232, 255, 235);
-        }
-
-        .col-sm {
-            padding-top: 25px;
-
-
-        }
-
-        .results {
-
-            padding-left: 60px;
-            width: 3800px;
-
-        }
-
-        .button {
-            border: none;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            transition-duration: 0.4s;
-            cursor: pointer;
-        }
-
-        .button1 {
-            background-color: white;
-            color: black;
-            border: 2px solid #4CAF50;
-
-        }
-
-        #choice1 {
-            width: 200px;
-
-        }
-
-        .button1:hover {
-            background-color: rgb(63, 155, 112);
-            color: white;
-        }
-
-    </style>
 
 </head>
 <body>
@@ -150,10 +90,10 @@
 <div class="results">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-        <table border='1' class="item-list">
+        <table class="item-list" border="1">
             <thead>
             <tr>
-                <th colspan="5">Products</th>
+                <th colspan="6">Products</th>
             </tr>
             <tr>
                 <td>Timestamp</td>
