--- a/src/modules/static/result.html
+++ b/src/modules/static/result.html
@@ -20,6 +20,23 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
+<div class="container top-heading">
+    <p><h1>Get all your SLASHING deals here!</h1></p>
+</div>
+
+<div class="container">
+    <div class="sb-example-1">
+        <form action="/search" method="get">
+            <div class="search">
+                <input type="text" name="product_name" class="searchTerm" placeholder="Type here">
+                <button type="submit" class="searchButton">
+                    <i class="fa fa-search"></i>
+                </button>
+            </div>
+        </form>
+    </div>
+</div>    
+
 <div class="container" id="abc">
     <div class="row">
         <div class="col-sm">
@@ -117,13 +134,15 @@
                             </a>
                         </div>
                     </div>
-                    <div class="card-body title"  style="height: 3em; padding-top: 0.09375em;">
-                        <a href={{ product.link }} target="_blank">
+                    <div class="card-body title">
+                        <a style="text-decoration: none; color: rgb(37, 65, 56);" href={{ product.link }} target="_blank">
                             <p class="two-line-text">{{ product.title }}</p>
                         </a>
                     </div>
                     <div class="card-body" style="text-align: center;">   
-                        <p class="card-text"><b>{{ product.price }}</b></p>
+                        <div class="price">
+                            <p class="card-text"><b>{{ product.price }}</b></p>
+                        </div>
                         <p class="card-text">Average rating: {{ product.rating }}</p>
                     </div>
                 </div>
