Login and sign up page created

--- a/src/modules/static/signin.html
+++ b/src/modules/static/signin.html
@@ -1,63 +1,3 @@
-<!--DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<Button to open the modal -->
-<!--<button onclick="document.getElementById('id01').style.display='block'">Sign Up</button>
-
-< The Modal (contains the Sign Up form) 
-<div id="id01" class="modal">
-  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal"></span>
-  <form class="modal-content" action="/action_page.php">-->
-    <!--div class="container">
-      <h1>Sign In</h1>
-      <p>Please fill in this form to create an account.</p>
-      <hr>
-      <label for="email"><b class="details">Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
-
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
-
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-      <div class="clearfix">
-        <p><a href="signup.html">Go to sign in page</a></p>
-        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signup">Sign Up</button>
-      </div>
-    </div>
-  </form -->
-
-<!--DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-<body>
-  <form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,33 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
 </head>
-<section class="appointment-booking">
+<section>
     <h1>Slash Account</h1>
     <div class="container register-form">
         <div class="form">
             <div class="note">
-                <p>Appointment form</p>
+                <p>Sign In Page</p>
             </div>
 
             <div class="form-content">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Name" value="">
+                            <input type="text" class="form-control" placeholder="Email Address" value="">
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Enter Password" value="">
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Email Address" value="">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Confirm Password" value="">
-                        </div>
-                    </div>
                 </div>
+                <a class="btnSubmit" href="./static/signup.html">Login</a>
                 <button type="button" class="btnSubmit">Submit</button>
             </div>
         </div>
