--- a/src/modules/static/signin.html
+++ b/src/modules/static/signin.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
 </head>
-<section>
-    <h1>Slash Account</h1>
+<body>
+<h1>Slash Account</h1>
+<form action="/" method="post">
     <div class="container register-form">
         <div class="form">
             <div class="note">
@@ -21,16 +25,22 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Email Address" value="">
+                            <input type="text" class="form-control" placeholder="Email Address" name="email">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter Password" value="">
+                            <input type="text" class="form-control" placeholder="Enter Password" name="password">
                         </div>
                     </div>
                 </div>
-                <a class="btnSubmit" href="./static/signup.html">Login</a>
-                <button type="button" class="btnSubmit">Submit</button>
+
+                <button type="submit" class="btnSubmit">Submit</button>
+                <form action="/signup" method="get">
+                    <button type="submit" class="btnSubmit">Signup</button>
+                </form>
+
             </div>
         </div>
     </div>
-</section>
+</form>
+</body>
+</html>
