--- a/src/modules/static/signup.html
+++ b/src/modules/static/signup.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
 </head>
-<section>
-    <h1>Slash Account</h1>
+<body>
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul>
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
+<h1>Slash Account</h1>
+<form action="/signup" method="post">
     <div class="container register-form">
         <div class="form">
             <div class="note">
@@ -21,40 +34,23 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="First Name" value="">
+                            <input type="text" class="form-control" placeholder="Email Address" name="email">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Date of Birth" value="">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Last Name" value="">
+                            <input type="text" class="form-control" placeholder="Enter Password" name="password">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Phone Number" value="">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter Address" value="">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter Password" value="">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Email Address" value="">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Confirm Password" value="">
+                            <input type="text" class="form-control" placeholder="Confirm Password"
+                                   name="confirmpassword">
                         </div>
                     </div>
                 </div>
-                    <a class="btnSubmit" href="./static/signin.html">Login</a>
-                <a class="btnSubmit" href="./static/landing.html">Submit</a>
+
+                <button class="btnSubmit" type="submit">Signup</button>
+
             </div>
         </div>
     </div>
-</section>
+</form>
+</body>
+</html>
