Landing page UI updates

--- a/src/modules/static/landing.html
+++ b/src/modules/static/landing.html
@@ -16,16 +16,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
-<body>
-<h1 id="header"> Welcome to Mini Version of SLASH! </h1>
+<body style="background-color:rgb(220, 252, 225);">
+<!-- <h1 id="header"> Welcome to Mini Version of SLASH! </h1> -->
 <img src="/static/images/slash.png" alt="slash" style="width:40%;">
 <br>
-<br>
 <hr>
-<br>
 
-<div class="container1" style="background-color:  rgb(232, 255, 235);">
-    <div class="w-100 p-3" id="header" style="background-color: rgb(232, 255, 235);">
+<div class="container1">
+    <div class="w-100 p-3" id="header" style="background-color: rgb(128, 197, 138);">
         <h3>What are you</h3>
         <h3>looking for?</h3>
     </div>
@@ -41,12 +39,6 @@
         </form>
     </div>
 </div>
-{#<form action="/" method="POST">#}
-{#    Email : <input type="email" name="email"><br>#}
-{#    Password : <input type="password" name="password"><br>#}
-{#    <input type="submit">#}
-{#</form>#}
-<br>
 <hr>
 </body>
 </html>
